fix "", "      ", page number

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <form class="search-form" id="search-form">
-    <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+    <input type="text" name="query" autocomplete="off" placeholder="Search images..." required />
   </form>
   <ul class="gallery is-hidden">
     <!-- Список <li> с карточками изображений -->
